--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     {% endfor %}
   </p>
   {% endfor %}
-  <button>Login</button>
+  <button class="submit">Login</button>
 </form>
 
 {% endblock %}
