--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
     {% endfor %}
   </p>
   {% endfor %}
-  <button>Register</button>
+  <button class="submit">Register</button>
 </form>
 
 {% endblock %}
