--- a/templates/secret.html
+++ b/templates/secret.html
@@ -11,7 +11,7 @@
     {{feed.message}}<b> by {{feed.user.username}}</b>
     {% if session['user_id'] == feed.user_id %}
     <form action="/feedback/{{feed.id}}/delete" method="post">
-      <button>X</button>
+      <button class="delete">X</button>
     </form>
     {% endif %}
   </li>
