--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -8,6 +8,6 @@
     {% endfor %}
   </p>
   {% endfor %}
-  <button>Submit Feedback</button>
+  <button class="submit">Submit Feedback</button>
 </form>
 {% endblock %}
