--- a/templates/secret.html
+++ b/templates/secret.html
@@ -8,12 +8,14 @@
 <ul>
   {% for feed in feedback %}
   <li>
-    {{feed.message}}<b> by {{feed.user.username}}</b>
-    {% if session['user_id'] == feed.user_id %}
-    <form action="/feedback/{{feed.id}}/delete" method="post">
-      <button class="delete">X</button>
-    </form>
-    {% endif %}
+    <span>
+      {{feed.message}}<b> by {{feed.user.username}}</b>
+      {% if session['user_id'] == feed.user_id %}
+      <form action="/feedback/{{feed.id}}/delete" method="post">
+        <button class="delete">X</button>
+      </form>
+      {% endif %}
+    </span>
   </li>
   {% endfor %}
 </ul>
